@@ -1,5 +1,4 @@
-1. portage support (via qfile)
-1. opt to change rpm db directory
+1. portage support
 
 2. use regexps on file names 
 2. retrieve additional symbol information (such as symbol@version);
